--- a/config.properties
+++ b/config.properties
@@ -1,5 +1,5 @@
 baseUrl=https://juice-shop.herokuapp.com/
-validEmail=
-validPassword=
+validEmail=Priyankatestuser123@gmail.com
+validPassword=123testuser@123
 invalidEmail=wrong@user.com
 invalidPassword=wrongpass
